Bug 517202 - [palette] "Animation Color set" is set to default
Summary: [palette] "Animation Color set" is set to default
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Resource Management (other bugs)
Version First Reported In: 5.3.0-beta2
Platform: Debian stable Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2026-03-06 18:15 UTC by David REVOY
Modified: 2026-03-09 15:54 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David REVOY 2026-03-06 18:15:14 UTC
Hey!

How to reproduce the bug:
If you click any color slot (eg: foreground color on top toolbar) the "Animation Color set" palette will be the palette visible by default.

Expected:
Have the "Default" palette by ... default :-)
Comment 1 Dmitry Kazakov 2026-03-09 14:54:02 UTC
I can confirm the issue!
Comment 2 Dmitry Kazakov 2026-03-09 15:54:11 UTC
Git commit fdca68403eae0fd843bbf41a8bb4ed5df17d974e by Dmitry Kazakov.
Committed on 09/03/2026 at 15:53.
Pushed by dkazakov into branch 'master'.

Fix Default palette to be the default in the internal selector

M  +32   -12   libs/widgets/KisDlgInternalColorSelector.cpp

https://invent.kde.org/graphics/krita/-/commit/fdca68403eae0fd843bbf41a8bb4ed5df17d974e
Comment 3 Dmitry Kazakov 2026-03-09 15:54:25 UTC
Git commit 4b536bd13516f682c6fd303acdbb48de6601f93d by Dmitry Kazakov.
Committed on 09/03/2026 at 15:54.
Pushed by dkazakov into branch 'krita/6.0'.

Fix Default palette to be the default in the internal selector

M  +32   -12   libs/widgets/KisDlgInternalColorSelector.cpp

https://invent.kde.org/graphics/krita/-/commit/4b536bd13516f682c6fd303acdbb48de6601f93d