Fix Default palette to be the default in the internal selector

BUG:517202